crypt alignment fix

--- a/css/crypt.css
+++ b/css/crypt.css
@@ -44,7 +44,7 @@ a, label {
 }
 
 .main{ 
-    margin-top: 20vh;
+    margin-top: 10vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
